chore(ci): test CLI e2e workflow with GNU parallel (#2720)
### Proposed Changes

* installs GNU parallel onto the ubuntu image used for the otdfctl e2e
tests, per the [BATS
docs](https://bats-core.readthedocs.io/en/stable/usage.html#parallel-execution)

### Checklist

- [ ] I have added or updated unit tests
- [ ] I have added or updated integration tests (if appropriate)
- [ ] I have added or updated documentation

### Testing Instructions

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -461,6 +461,10 @@ jobs:
     name: otdfctl e2e tests
     runs-on: ubuntu-latest
     steps:
+      - name: Install GNU parallel
+        run: |
+          sudo apt update
+          sudo apt install -y parallel
       - uses: opentdf/platform/test/start-up-with-containers@main
         with:
           platform-ref: ${{ github.event.pull_request.head.sha || github.sha }}
