--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -72,6 +72,8 @@ server:
       username_claim: # preferred_username
       # That claim to access groups (i.e. realm_access.roles)
       groups_claim: # realm_access.roles
+      # Claim the represents the idP client ID 
+      client_id_claim: # azp
       ## Extends the builtin policy
       extension: |
         g, opentdf-admin, role:admin
