chore(ci): Lets nightly checks call checks.yaml (#2430)
### Proposed Changes

* ups the permissions, even though they aren't all needed at runtime 

### Checklist

- [ ] I have added or updated unit tests
- [ ] I have added or updated integration tests (if appropriate)
- [ ] I have added or updated documentation

### Testing Instructions

--- a/.github/workflows/nightly-checks.yaml
+++ b/.github/workflows/nightly-checks.yaml
@@ -81,5 +81,6 @@ jobs:
     permissions:
       checks: write
       contents: read
-      pull-requests: read
+      pull-requests: write
+      packages: read
     uses: opentdf/platform/.github/workflows/checks.yaml@main
