--- a/opentdf-kas-mode.yaml
+++ b/opentdf-kas-mode.yaml
@@ -114,5 +114,5 @@ server:
         - kid: e1
           alg: ec:secp256r1
           private: kas-ec-private.pem
-          cert: kas-ec-cert.pem
+          cert: kas-ec-public.pem
   port: 8181
