--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -166,5 +166,5 @@ server:
         - kid: e1
           alg: ec:secp256r1
           private: kas-ec-private.pem
-          cert: kas-ec-cert.pem
+          cert: kas-ec-public.pem
   port: 8080
