--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -119,6 +119,7 @@ server:
       #        insecure: true # If collector is just HTTP, not HTTPS
       # headers: {} # Add if authentication is needed
   cors:
+    enabled: true
     # "*" to allow any origin or a specific domain like "https://yourdomain.com"
     allowedorigins:
       - "*"
