--- a/.github/workflows/traffic.yaml
+++ b/.github/workflows/traffic.yaml
@@ -65,8 +65,7 @@ jobs:
         uses: google-github-actions/auth@7c6bc770dae815cd3e89ee6cdf493a5fab2cc093 # v3.0.0
         with:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-
+          service_account: gha-9a643e00025c3c3c2568866@prj-opentdf-4fc4.iam.gserviceaccount.com
       - id: "upload-file"
         uses: google-github-actions/upload-cloud-storage@7c6e11cb7291594c5dfe0bc1dd9cd905e31e600c # v2.2.2
         with:
