ci: DSPX-1808 enable staticcheck linter
Signed-off-by: Scott Hamrick <2623452+cshamrick@users.noreply.github.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -59,7 +59,7 @@ linters:
     - sloglint
     - spancheck
     - sqlclosecheck
-    # - staticcheck
+    - staticcheck
     # - tagalign
     # - tagliatelle # maybe we want this to force consistent config to ensure consistent tag alignment across the codebase
     - testableexamples
