--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -80,6 +80,7 @@ jobs:
           version: v2.1
           working-directory: ${{ matrix.directory }}
           skip-cache: true
+          only-new-issues: true
       - if: matrix.directory == 'service'
         run: .github/scripts/init-temp-keys.sh
       - run: go test ./... -short
