--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -188,10 +188,10 @@ jobs:
       TLS_ENABLED: "true"
       VAULT_ADDR: "https://127.0.0.1:8200"
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # 4.4.2
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           persist-credentials: false
-      - uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b #v5.4.0
+      - uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           go-version-file: "service/go.mod"
           check-latest: false
@@ -221,7 +221,7 @@ jobs:
           wget -O - https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(grep -oP '(?<=UBUNTU_CODENAME=).*' /etc/os-release || lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
           sudo apt update && sudo apt install vault
-      - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635
+      - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635 # v1.0.7
         name: start vault in background
         with:
           run: >
@@ -243,7 +243,7 @@ jobs:
       - run: docker compose up -d --wait --wait-timeout 240 || (docker compose logs && exit 1)
       - run: go run ./service provision keycloak
       - run: go run ./service provision fixtures
-      - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635
+      - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635 # v1.0.7
         name: start server in background
         with:
           run: |
@@ -254,7 +254,7 @@ jobs:
           log-output-if: true
           wait-for: 90s
       - name: Setup Bats and bats libs
-        uses: bats-core/bats-action@42fcc8700f773c075a16a90eb11674c0318ad507 #v3.0.1
+        uses: bats-core/bats-action@42fcc8700f773c075a16a90eb11674c0318ad507 # 3.0.1
       - run: ./examples/ckms/trust-sample.bats
 
   benchmark:
