--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -472,9 +472,9 @@ jobs:
       - uses: opentdf/platform/test/start-up-with-containers@main
         with:
           platform-ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - uses: opentdf/otdfctl/e2e@b248f20c3039d21b696a6cc9ec2dc0739bbbb93b # https://github.com/opentdf/otdfctl/pull/687
+      - uses: opentdf/otdfctl/e2e@main
         with:
-          otdfctl-ref: "b248f20c3039d21b696a6cc9ec2dc0739bbbb93b"
+          otdfctl-ref: "main"
         env:
           TESTRAIL_USER: ${{ secrets.TESTRAIL_USER }}
           TESTRAIL_PASS: ${{ secrets.TESTRAIL_PASS }}
