Revert "run new obligations x-tests that are yet to be merged in CI"
This reverts commit 5c2b678b2f6a179d725b6d9145de2446120dc204.

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -394,7 +394,7 @@ jobs:
       packages: read
       pull-requests: write
       checks: write
-    uses: opentdf/tests/.github/workflows/xtest.yml@f5ecf4cff109b05556e76463a1c3843b8648eb15
+    uses: opentdf/tests/.github/workflows/xtest.yml@main
     with:
       focus-sdk: go
       # use commit instead of ref so we can "go get" specific sdk version
