--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -394,7 +394,7 @@ jobs:
       packages: read
       pull-requests: write
       checks: write
-    uses: opentdf/tests/.github/workflows/xtest.yml@main
+    uses: opentdf/tests/.github/workflows/xtest.yml@4e270a48c64dfeebc073e21f6fb172c80799b7de
     with:
       focus-sdk: go
       # use commit instead of ref so we can "go get" specific sdk version
