--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -388,17 +388,106 @@ jobs:
           file: ./Dockerfile
           push: false
 
+  prepare-sdk-platform-ref:
+    name: Prepare SDK platform ref
+    permissions:
+      contents: read
+    runs-on: ubuntu-22.04
+    outputs:
+      platform_ref: ${{ steps.compute.outputs.platform_ref }}
+      sdk_ref: ${{ steps.compute.outputs.sdk_ref }}
+    steps:
+      - name: Detect SDK backport branch
+        id: detect
+        shell: bash
+        run: |
+          BRANCH_NAME="${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}"
+          # Determine base branch of PR if available
+          BASE_REF="${GITHUB_BASE_REF:-}"
+          if [ -z "$BASE_REF" ] && [ -n "$GITHUB_EVENT_PATH" ] && [ -f "$GITHUB_EVENT_PATH" ]; then
+            BASE_REF=$(jq -r '.pull_request.base.ref // empty' "$GITHUB_EVENT_PATH" 2>/dev/null || true)
+          fi
+
+          IS_SDK_BACKPORT_BRANCH=false
+          IS_SDK_RELEASE_BRANCH_AS_BASE=false
+          if echo "$BRANCH_NAME" | grep -Eq '^backport-[0-9]+-to-release/sdk/v[0-9]+\.[0-9]+\.[0-9]+$'; then IS_SDK_BACKPORT_BRANCH=true; fi
+          if [ -n "$BASE_REF" ] && echo "$BASE_REF" | grep -Eq '^release/sdk/v[0-9]+\.[0-9]+\.[0-9]+$'; then IS_SDK_RELEASE_BRANCH_AS_BASE=true; fi
+
+          if [ "$IS_SDK_BACKPORT_BRANCH" = true ] && [ "$IS_SDK_RELEASE_BRANCH_AS_BASE" = true ]; then
+            echo "is_backport=true" >> "$GITHUB_OUTPUT"
+            echo "IS_SDK_BACKPORT=true" >> "$GITHUB_ENV"
+          else
+            echo "is_backport=false" >> "$GITHUB_OUTPUT"
+            echo "IS_SDK_BACKPORT=false" >> "$GITHUB_ENV"
+          fi
+          # expose for debugging if needed
+          echo "branch_name=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
+          echo "base_branch=${BASE_REF:-}" >> "$GITHUB_OUTPUT"
+      - name: Checkout repository (for manifest and tags)
+        if: steps.detect.outputs.is_backport == 'true'
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+          fetch-tags: true
+      - name: Compute SDK platform ref from manifest
+        id: compute
+        if: steps.detect.outputs.is_backport == 'true'
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          script: |
+            const fs = require('fs');
+            const path = require('path');
+            const { execSync } = require('child_process');
+
+            // derive sdk_ref from the triggering branch
+            const sdkRef = process.env.GITHUB_HEAD_REF || process.env.GITHUB_REF_NAME || '';
+            if (process.env.GITHUB_ENV) {
+              fs.appendFileSync(process.env.GITHUB_ENV, `SDK_REF=${sdkRef}\n`);
+            }
+
+            let platformRef = 'main';
+            try {
+              const manifestPath = path.join('.github', 'release-please', 'release-please-manifest.json');
+              if (fs.existsSync(manifestPath)) {
+                const data = JSON.parse(fs.readFileSync(manifestPath, 'utf8'));
+                const serviceVer = data?.service;
+                if (serviceVer && typeof serviceVer === 'string' && serviceVer.length > 0) {
+                  try { execSync('git fetch --tags --prune', { stdio: 'ignore' }); } catch (_) {}
+                  const tag = `service/v${serviceVer}`;
+                  try {
+                    execSync(`git rev-parse -q --verify refs/tags/${tag}`, { stdio: 'ignore' });
+                    platformRef = tag;
+                  } catch (_) {
+                    // No matching tag found; keep default of 'main'
+                  }
+                }
+              }
+            } catch (e) {
+              core.info(`Falling back to main due to error: ${e.message}`);
+            }
+
+            if (process.env.GITHUB_ENV) {
+              fs.appendFileSync(process.env.GITHUB_ENV, `PLATFORM_REF=${platformRef}\n`);
+            }
+
+            core.setOutput('platform_ref', platformRef);
+            core.setOutput('sdk_ref', sdkRef);
+
   platform-xtest:
+    needs:
+      - prepare-sdk-platform-ref
     permissions:
       contents: read
       packages: read
       pull-requests: write
       checks: write
-    uses: opentdf/tests/.github/workflows/xtest.yml@main
+    uses: opentdf/tests/.github/workflows/xtest.yml@31f7123afb1a2cd7f7ba46874e71d8aa76ba2f10
     with:
       focus-sdk: go
+      go-sdk-ref: ${{ needs.prepare-sdk-platform-ref.outputs.sdk_ref || null }}
       # use commit instead of ref so we can "go get" specific sdk version
-      platform-ref: ${{ github.event.pull_request.head.sha || github.sha }} lts
+      platform-ref: ${{ needs.prepare-sdk-platform-ref.outputs.platform_ref || github.event.pull_request.head.sha || github.sha }} lts
 
   tests-bdd:
     name: Cucumber BDD Tests
