--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -405,10 +405,10 @@ jobs:
           echo "$BRANCH_NAME"
           # Determine base branch of PR if available
           BASE_REF="${GITHUB_BASE_REF:-}"
-          echo "$BASE_REF"
           if [ -z "$BASE_REF" ] && [ -n "$GITHUB_EVENT_PATH" ] && [ -f "$GITHUB_EVENT_PATH" ]; then
             BASE_REF=$(jq -r '.pull_request.base.ref // empty' "$GITHUB_EVENT_PATH" 2>/dev/null || true)
           fi
+          echo "$BASE_REF"
 
           IS_SDK_BACKPORT_BRANCH=false
           IS_SDK_RELEASE_BRANCH_AS_BASE=false
@@ -416,15 +416,13 @@ jobs:
           if [ -n "$BASE_REF" ] && echo "$BASE_REF" | grep -Eq '^release/sdk/v[0-9]+\.[0-9]+\.[0-9]+$'; then IS_SDK_RELEASE_BRANCH_AS_BASE=true; fi
 
           if [ "$IS_SDK_BACKPORT_BRANCH" = true ] && [ "$IS_SDK_RELEASE_BRANCH_AS_BASE" = true ]; then
-            echo "is_backport=true" >> "$GITHUB_OUTPUT"
+            echo "is_backport=true"
             echo "IS_SDK_BACKPORT=true" >> "$GITHUB_ENV"
           else
-            echo "is_backport=false" >> "$GITHUB_OUTPUT"
+            echo "is_backport=false"
             echo "IS_SDK_BACKPORT=false" >> "$GITHUB_ENV"
           fi
           # expose for debugging if needed
-          echo "branch_name=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
-          echo "base_branch=${BASE_REF:-}" >> "$GITHUB_OUTPUT"
       - name: Checkout repository (for manifest and tags)
         if: steps.detect.outputs.is_backport == 'true'
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
