--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -410,19 +410,14 @@ jobs:
           fi
           echo "$BASE_REF"
 
-          IS_SDK_BACKPORT_BRANCH=false
           IS_SDK_RELEASE_BRANCH_AS_BASE=false
           if echo "$BRANCH_NAME" | grep -Eq '^backport-[0-9]+-to-release/sdk/v[0-9]+\.[0-9]+(\.[0-9]+)?$'; then IS_SDK_BACKPORT_BRANCH=true; fi
           if [ -n "$BASE_REF" ] && echo "$BASE_REF" | grep -Eq '^release/sdk/v[0-9]+\.[0-9]+(\.[0-9]+)?$'; then IS_SDK_RELEASE_BRANCH_AS_BASE=true; fi
 
           if [ "$IS_SDK_BACKPORT_BRANCH" = true ] && [ "$IS_SDK_RELEASE_BRANCH_AS_BASE" = true ]; then
-            is_backport = true
-            echo "is_backport" >> "$GITHUB_OUTPUT"
-            echo "IS_SDK_BACKPORT=true" >> "$GITHUB_ENV"
+            echo "is_backport=true" >> "$GITHUB_OUTPUT"
           else
-            is_backport = false
-            echo "is_backport" >> "$GITHUB_OUTPUT"
-            echo "IS_SDK_BACKPORT=false" >> "$GITHUB_ENV"
+            echo "is_backport=false" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Checkout repository (for manifest and tags)
