--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -387,13 +387,13 @@ jobs:
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             BASE_SHA="${{ github.event.pull_request.base.sha }}"
             if git diff --name-only "$BASE_SHA" HEAD | grep -q '\.proto$'; then
-              echo "proto=true" >> $GITHUB_OUTPUT
+              echo "proto=true" >> "$GITHUB_OUTPUT"
             else
-              echo "proto=false" >> $GITHUB_OUTPUT
+              echo "proto=false" >> "$GITHUB_OUTPUT"
             fi
           else
             # For non-PR events (push, merge_group), always run
-            echo "proto=true" >> $GITHUB_OUTPUT
+            echo "proto=true" >> "$GITHUB_OUTPUT"
           fi
 
   image:
