--- a/test/start-additional-kas/action.yaml
+++ b/test/start-additional-kas/action.yaml
@@ -17,6 +17,10 @@ inputs:
     description: 'Whether to enable ECC wrapping for TDFs'
     required: false
     type: boolean
+  key-management:
+    default: false
+    description:  'Whether or not key_management is enabled for this KAS'
+    type: boolean
 
 runs:
   using: 'composite'
@@ -28,7 +32,9 @@ runs:
           <opentdf-dev.yaml >opentdf-${{ inputs.kas-name }}.yaml yq e '
             (.server.port = ${{ inputs.kas-port }})
             | (.mode = ["kas"])
-            | (.services.kas.ec_tdf_enabled = ${{ inputs.ec-tdf-enabled }})
+            | (.services.kas.preview.ec_tdf_enabled = ${{ inputs.ec-tdf-enabled }})
+            | (.services.kas.preview.key_management = ${{ inputs.key-management }})
+            | (.services.kas.registered_kas_uri = "http://localhost:${{ inputs.kas-port }}")
             | (.sdk_config = {"client_id":"opentdf","client_secret":"secret","core":{"endpoint":"http://localhost:8080","plaintext":true}})
           '
           && .github/scripts/watch.sh opentdf-${{ inputs.kas-name }}.yaml ./opentdf --config-file ./opentdf-${{ inputs.kas-name }}.yaml start
