feat(server): add additive CORS configuration fields
  Add `additionalheaders`, `additionalmethods`, and `additionalexposedheaders`
  fields to CORS config, allowing operators to append custom values without
  replacing the entire default list.

  - Add mergeStringSlices() for case-sensitive method deduplication
  - Add mergeHeaderSlices() for case-insensitive header deduplication (RFC 7230)
  - Add Effective*() methods to compute merged values at runtime
  - Log effective CORS values at startup for operator visibility
  - Add unit tests for merge functions and Effective* methods
  - Update docs/Configuring.md with CORS configuration section

  Operators can now add custom headers without copying all defaults:

  ```yaml
  server:
    cors:
      additionalheaders:
        - X-Custom-Header

  Backwards compatible: existing configs work unchanged.

--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -151,6 +151,12 @@ server:
     allowcredentials: true
     # Sets the maximum age (in seconds) of a specific CORS preflight request
     maxage: 3600
+    # Additive fields - append to base lists without replacing defaults
+    # Use these to add custom values without having to copy all defaults
+    # additionalmethods: []
+    # additionalheaders:
+    #   - X-Custom-Header
+    # additionalexposedheaders: []
   grpc:
     reflectionEnabled: true # Default is false
   # http:
