feat(core): support horizontally scaling platform postgres

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -83,6 +83,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 2m
+  # PostgreSQL Primary Database (Writer)
+  # This is the main database that handles all write operations
+  # Streaming replication is configured to replicate to read replicas
   opentdfdb:
     image: postgres:15-alpine
     restart: always
@@ -91,13 +94,158 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: changeme
       POSTGRES_DB: opentdf
+    volumes:
+      - opentdfdb_primary_data:/var/lib/postgresql/data
+    # Replication setup happens inline
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        # Setup replication user on first init
+        cat > /docker-entrypoint-initdb.d/01-replication-setup.sh << 'EOF'
+        #!/bin/bash
+        set -e
+        echo "Setting up replication user..."
+        psql -v ON_ERROR_STOP=1 --username "$$POSTGRES_USER" --dbname "$$POSTGRES_DB" <<-EOSQL
+            DO \$$\$$
+            BEGIN
+                IF NOT EXISTS (SELECT FROM pg_catalog.pg_roles WHERE rolname = 'replicator') THEN
+                    CREATE ROLE replicator WITH REPLICATION PASSWORD 'replicator_password' LOGIN;
+                END IF;
+            END
+            \$$\$$;
+            GRANT CONNECT ON DATABASE $$POSTGRES_DB TO replicator;
+        EOSQL
+        echo "host replication replicator 0.0.0.0/0 md5" >> "$${PGDATA}/pg_hba.conf"
+        echo "Replication user configured"
+        EOF
+        chmod +x /docker-entrypoint-initdb.d/01-replication-setup.sh
+        # Start postgres with replication config
+        exec docker-entrypoint.sh postgres -c wal_level=replica -c max_wal_senders=10 -c max_replication_slots=10 -c hot_standby=on -c wal_keep_size=64
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 10
     ports:
       - "${POSTGRES_EXPOSE_PORT:-5432}:5432"
+
+  # PostgreSQL Read Replica 1
+  # Replicates from primary using streaming replication
+  # Handles read-only queries for horizontal scaling
+  opentdfdb-replica1:
+    image: postgres:15-alpine
+    restart: always
+    user: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: changeme
+      POSTGRES_DB: opentdf
+      PRIMARY_HOST: opentdfdb
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - opentdfdb_replica1_data:/var/lib/postgresql/data
+    depends_on:
+      opentdfdb:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    ports:
+      - "5433:5432"
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        # Wait for primary to be ready
+        until pg_isready -h opentdfdb -p 5432 -U postgres; do
+          echo "Waiting for primary database..."
+          sleep 2
+        done
+
+        # Check if data directory is empty (first run)
+        if [ ! -s "$$PGDATA/PG_VERSION" ]; then
+          echo "Initializing replica from primary..."
+          rm -rf $$PGDATA/*
+
+          # Clone primary database
+          PGPASSWORD='replicator_password' pg_basebackup \
+            -h opentdfdb \
+            -D $$PGDATA \
+            -U replicator \
+            -v \
+            -P \
+            -X stream \
+            -R
+
+          # Fix permissions for PostgreSQL
+          chmod 700 $$PGDATA
+          chown -R postgres:postgres $$PGDATA
+
+          echo "Replica initialized successfully"
+        fi
+
+        # Start PostgreSQL
+        exec postgres
+
+  # PostgreSQL Read Replica 2
+  # Replicates from primary using streaming replication
+  # Handles read-only queries for horizontal scaling
+  opentdfdb-replica2:
+    image: postgres:15-alpine
+    restart: always
+    user: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: changeme
+      POSTGRES_DB: opentdf
+      PRIMARY_HOST: opentdfdb
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - opentdfdb_replica2_data:/var/lib/postgresql/data
+    depends_on:
+      opentdfdb:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    ports:
+      - "5434:5432"
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        # Wait for primary to be ready
+        until pg_isready -h opentdfdb -p 5432 -U postgres; do
+          echo "Waiting for primary database..."
+          sleep 2
+        done
+
+        # Check if data directory is empty (first run)
+        if [ ! -s "$$PGDATA/PG_VERSION" ]; then
+          echo "Initializing replica from primary..."
+          rm -rf $$PGDATA/*
+
+          # Clone primary database
+          PGPASSWORD='replicator_password' pg_basebackup \
+            -h opentdfdb \
+            -D $$PGDATA \
+            -U replicator \
+            -v \
+            -P \
+            -X stream \
+            -R
+
+          # Fix permissions for PostgreSQL
+          chmod 700 $$PGDATA
+          chown -R postgres:postgres $$PGDATA
+
+          echo "Replica initialized successfully"
+        fi
+
+        # Start PostgreSQL
+        exec postgres
 
   jaeger:
     image: jaegertracing/all-in-one:latest
@@ -205,6 +353,14 @@ services:
         condition: service_healthy
 
 volumes:
+  # OpenTDF Database Volumes
+  opentdfdb_primary_data:
+    name: opentdfdb_primary_data
+  opentdfdb_replica1_data:
+    name: opentdfdb_replica1_data
+  opentdfdb_replica2_data:
+    name: opentdfdb_replica2_data
+  # ERS Test Volumes
   ers_postgres_data:
     name: ers_test_postgres_data
   ers_ldap_data:
